--- a/algorithm/npuzzle/.vscode/settings.json
+++ b/algorithm/npuzzle/.vscode/settings.json
@@ -66,6 +66,7 @@
         "regex": "cpp",
         "deque": "cpp",
         "list": "cpp",
-        "fstream": "cpp"
+        "fstream": "cpp",
+        "__functional_03": "cpp"
     }
 }
